[package]
name = "imgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7"
base64 = "0.13"
image = "0.23"
imageproc = "0.22"
lambda_runtime = "0.4"
lambda_http = "0.4"
palette = "0.6"
serde = "1"
serde_json = "1.0"
sha2 = "0.9"
tokio = { version = "1", features = ["full"] }